# logician

./: .coverage  .gitignore  CLAUDE.md  CNAME  Makefile  README.md  SKILLS.md  SOUL.md  academic_agent.py  agent_sessions.db  common_mistakes.md  core.py  find_fds_error.py  graph-cli  helpers.py  logician_bridge.py  logician_messaging.py  messaging_agent.py  plot_helpers.py  plugin_cli.py  pyproject.toml  python_bridge.py  run.ipynb  run.py  skills_health.md  test_agent.ipynb  test_analysis.py  test_chat_templates.py  test_clean_session.py  test_edit_file.py  test_invoke_args.py  test_registry.py  test_tools_compaction.py  testing.ipynb  ts_agent.py  ts_tools.py  tui_agent.py  wiki-cli  wiki.py
.claude/: settings.json
.github/workflows/: deploy-pages.yml
apps/: __init__.py
apps/plotting/: __init__.py  embedding_map.py
apps/runners/: __init__.py  clean_session.py  repl_demo.py  repo_ingest.py  timeseries_demo.py  web_ui.py
cli/: README.md  package-lock.json  package.json  test_colors.js  tsconfig.json
cli/src/: bridge.ts  index.tsx
cli/src/stubs/: react-devtools-core.ts
docs/superpowers/plans/: 2026-03-11-cc-tools-skill.md
docs/superpowers/specs/: 2026-03-11-cc-tools-skill-design.md  (+1 more)
logician.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rust-cli/: Cargo.toml  cargo_test_final.out
rust-cli/src/: app.rs  bridge.rs  image.rs  main.rs  markdown.rs  ui.rs
scripts/: check_soul_tools.py
site/: index.html
skills/: .skills_catalog_cache.json  00_overview.md  10_data_loading.md  10_superpowers  20_preprocessing.md  20_ralph  30_analysis.md  30_anthropics  40_feynman  40_forecasting.md  50_pipelines.md  60_plotting.md  70_recommendations.md
skills/00_global/: 00_bootstrap.py  05_think.py  10_scratch.py  20_todo.py
skills/00_timeseries/: 00_bootstrap.py  00_overview.md  10_data_loading.md  20_preprocessing.md  20_preprocessing.py  30_analysis.md  40_forecasting.md  50_pipelines.md  50_pipelines.py  60_plotting.md  70_recommendations.md
skills/01_coding/: 00_bootstrap.py  10_file_ops.py  20_multi_edit.py  25_web.py  30_git.py  30_shell.py  40_quality.py  70_patch.py  70_rag.py  75_edit_block.py  80_svg_viz.py  90_explore.py  95_search_replace.py  README.md
skills/01_timeseries/: 10_data_loading.py  30_analysis.py  60_plotting.py
skills/02_coding/: 00_bootstrap.py  10_file_ops.py  20_shell.py  40_quality.py  50_repl.py  70_rag.py  80_svg_viz.py  90_explore.py
skills/02_timeseries/: 10_data_loading.py  20_preprocessing.py  30_analysis.py  40_forecasting.py  70_recommendations.py  80_advanced_mining.py
skills/03_academic/: 10_systematic.py
skills/04_svg/: 10_svg_viz.py  README.md
skills/05_rag/: 10_ingest.py  20_retrieve.py  30_tuning.py  README.md
skills/99_qol/: 00_firecrawl.py  10_web.py  20_docling_context.py  80_websearch.md
skills/academic/: SKILL.md
skills/coding/: README.md
skills/rag/: README.md  SKILL.md
skills/svg/: README.md
skills/wiki/: SKILL.md  wiki_cli.py  wiki_tool.py
src/: __init__.py  aaak_dialect.py  agent.py  backends.py  config.py  db.py  db_core.py  db_doc.py  db_message.py  eoh.py.bak  logging_utils.py  memory.py  messages.py  project_memory.py  prompt.py  rag_runtime.py  reasoner.py  repo_graph.py  repo_ingest.py  repo_registry.py  runtime_paths.py  startup_profiler.py  thinking.py  tools.py  wiki_context.py
src/agent/: __init__.py  classify.py  core.py  dispatcher.py  factory.py  guardrails.py  loop.py  prompt.py  startup.py  state.py  trace.py  types.py
src/backends/: __init__.py  base.py  common.py  llama_cpp.py  vllm.py
src/db/: __init__.py  core.py  document.py  embeddings.py  message.py  sqlite_pragmas.py  vector_backends.py
src/eoh/: __init__.py  engine.py  evaluation.py  hooks.py  models.py  prompts.py  runner.py  safety.py  types.py
src/hooks/: __init__.py  engine.py  loader.py  types.py
src/mcp/: __init__.py  client.py
src/memory/: __init__.py  palace.py  project.py  runtime.py
src/plugin_manager/: __init__.py  manager.py  state.py
src/reasoners/: __init__.py  auto_cot.py  base.py  best_of_n.py  in_context_cot.py  reflexion.py  registry.py  self_consistency.py  ssr.py  tot.py
src/repo/: __init__.py  db.py  graph.py  ingest.py  parser.py  postprocess.py  registry.py
src/skills/: loader.py  migrate_to_md.py  path_matching.py  path_resolution.py  skill_manifest.py
src/tools/: __init__.py  catalog.py  compaction.py  parser.py  plugin_cache.py  pool.py  progress.py  runtime.py  text_normalization.py
src/webui/: app.py  data.py
test/: diagnose_agent_loop.py  diagnose_llm.py  test_agent_behavior.py  test_agent_loop.py  test_agent_prompt_rag.py  test_agent_runtime_behavior.py  test_agent_runtime_public.py  test_agent_types.py  test_arxiv_source.py  test_auto_format.py  test_backends_common.py  test_bridge_multi_agent.py  test_bridge_stream_batching.py  test_cc_tools.py  test_chat_templates.py  test_chromadb_backend.py  test_classify.py  test_clean_session.py  test_coding_runtime_access.py  test_core_tools.py  test_db_collection_api.py  test_db_metadata_filters.py  test_db_query_normalization.py  test_dispatcher.py  test_edit_block.py  test_explore_tools.py  test_fd.py  test_files_libcst.py  test_filesystem_backend.py  test_github_backend.py  test_guardrails.py  test_hnsw_consistency.py  test_hooks_engine.py  test_inspection_result_guard.py  test_llama_cpp_backend.py  test_logician_bridge.py  test_mcp_context7.py  test_memory_palace.py  test_minimal_agent.py  test_mount_exclude.py  (+33 more)
tmp/: agent_loop_report.json  agent_loop_report.txt  pytest_core_python_promotion.txt  pytest_core_web_promotion.txt  pytest_lsp_slice.txt  pytest_rag_search_after_centralize.txt  pytest_repo_ingest_after_patch.txt  pytest_shell_candidates.txt  pytest_shell_git_review.txt  pytest_web_skill_cleanup.txt  rag_centralization_check.json  rag_repo_inventory.txt
webui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
webui/src/: App.tsx  ChatInterface.tsx  SessionSidebar.tsx  UtilityRail.tsx  api.ts  index.css  types.ts
wiki/: wiki.md
(+182 files in other folders)
