[package]
name = "logician"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logician"
path = "src/main.rs"

[dependencies]
tokio          = { version = "1",     features = ["full"] }
ratatui        = "0.29"
crossterm      = { version = "0.28",  features = ["event-stream"] }
serde          = { version = "1",     features = ["derive"] }
serde_json     = "1"
anyhow         = "1"
uuid           = { version = "1",     features = ["v4"] }
chrono         = { version = "0.4",   features = ["clock"] }
pulldown-cmark = "0.12"
futures        = "0.3"
