[package]
name = "logician"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logician"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-image = { version = "10.0.6", default-features = false, features = [
    "crossterm",
    "image-defaults",
] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
pulldown-cmark = "0.12"
futures = "0.3"
clap = { version = "4.5.60", features = ["derive", "env"] }
tui-textarea = "0.7.0"
syntect = "5.3.0"
